home page updated

--- a/public/index.html
+++ b/public/index.html
@@ -110,10 +110,15 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Professional</h2>
-                <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                <p class="lead">I am a Software Engineer by Professional. I love building awesome applications that try to solve our day-to-day problems in the world.
+                I am passionate about what I do and I belive I am good at that. I have about 4 years of experience overall. 3 years at Infosys Ltd, 1 year at EBSCO Information Services, Boston.
+                I am looking forward to start my new position at VMWare Inc. I am interested in DevOps and love getting my hands dirty with lots of technologies
+                that are needed for a DevOps infrastructure for an organization. As part of DevOps I have to use several programming and scripting languages on a day-to-day basis
+                which kind of makes me Jack Of All Trades. I also constantly look for open source projects and contribute to them in my free time.
+                Reach out to me on LinkedIn if you have any ideas or want to connect with me professionally. </p>
             </div>
             <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                <img class="img-responsive" src="home/img/ipad.png" alt="">
+                <img class="img-responsive" src="home/img/professional.jpg" alt="">
             </div>
         </div>
 
@@ -132,10 +137,13 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Personal</h2>
-                <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                <p class="lead">I am open minded and fun loving person. I love life as it is and try to live in each moment. I can speak 5 languages Telugu, English, Hindi, Tamil, Malayalam.
+                    I have friends all over the world and it's a lovely feeling to be in touch with everyone. I enjoy blogging, writing,  singing,, listening to music, camping, hiking, exploring
+                    new places. Connect to me on facebook to know me better.
+                </p>
             </div>
             <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                <img class="img-responsive" src="home/img/dog.png" alt="">
+                <img class="img-responsive" src="home/img/personal.jpg" alt="">
             </div>
         </div>
 
@@ -145,24 +153,7 @@
 </div>
 <!-- /.content-section-b -->
 
-<div class="content-section-a">
 
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-5 col-sm-6">
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <h2 class="section-heading">Social</h2>
-                <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-            </div>
-            <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                <img class="img-responsive" src="home/img/phones.png" alt="">
-            </div>
-        </div>
-
-    </div>
-    </div>
     <!-- /.container -->
 
 
